<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/e3"
        android:layout_width="409dp"
        android:layout_height="65dp"
        android:hint="@string/enter_email"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/e4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532" />

    <EditText
        android:id="@+id/e4"
        android:layout_width="405dp"
        android:layout_height="60dp"
        android:layout_marginBottom="484dp"
        android:hint="@string/enter_password"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="183dp"
        android:layout_height="73dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:onClick="signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e4"
        app:layout_constraintVertical_bias="0.27" />


</androidx.constraintlayout.widget.ConstraintLayout>