<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/e1"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:hint="@string/enter_the_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/e2"
        android:layout_width="401dp"
        android:layout_height="49dp"
        android:gravity="center"
        android:hint="@string/enter_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e1"
        app:layout_constraintVertical_bias="0.104"
        tools:layout_editor_absoluteX="5dp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="167dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:onClick="signup"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e2"
        app:layout_constraintVertical_bias="0.21" />

    <TextView
        android:layout_width="358dp"
        android:layout_height="62dp"
        android:id="@+id/tv1"
        android:gravity="center"
        android:text="Already Registered ? Sign in"
        android:textSize="25dp"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        app:layout_constraintVertical_bias="0.296" />


</androidx.constraintlayout.widget.ConstraintLayout>